# reviewpack

./: .gitignore  .reviewpack.example.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  action.yml  analyzer.py  cli.py  config.py  models.py  pyproject.toml  redaction.py
.github/: pull_request_template.md
docs/: ai-handoff.md  ai-preview.md  artifact-contract.md  commands.md  config-schema.md  configuration.md  design.md  github-action.md  github.md  installation.md  integration-json.md  integrations.md  json-output.md  local-git.md  output-artifacts.md  privacy.md  pypi-publishing.md  pypi-release-checklist.md  release-checklist.md  release-note-hints.md  release-notes-v0.1.0-draft.md  release-notes-v0.2.0-draft.md  release-notes-v0.3.0-draft.md  release-notes-v0.4.0-draft.md  release-notes-v0.5.0-draft.md  release-notes-v0.6.0-draft.md  release-notes-v0.6.1-draft.md  release-notes-v0.7.0-draft.md  reviewer-checklist.md  roadmap.md  status.md  testpypi-runbook.md  testpypi.md  trusted-publishing.md  usage.md  v1-readiness.md
eviewpack/: rules.py
examples/: .reviewpack.yml  README.md  github-action-comment.yml  github-action-local.yml  github-action.yml
reviewpack/: __init__.py  ai_context.py  ai_handoff.py  ai_preview.py  analyzer.py  cli.py  config.py  demo.py  git.py  github.py  github_client.py  github_comment.py  models.py  release_notes.py  renderers.py  reviewer_checklist.py  rules.py
schemas/: reviewpack-result.schema.json
tests/: test_action_contract.py  test_action_examples.py  test_action_metadata.py  test_ai_context.py  test_ai_handoff.py  test_ai_preview.py  test_analyzer.py  test_artifact_contract.py  test_git.py  (+19 more)
(+21 files in other folders)
