[project]
name = "reviewpack"
version = "0.1.0"
description = "Privacy-first context packs for AI-assisted pull request review."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Reviewpack contributors" }
]
keywords = [
  "code-review",
  "pull-request",
  "ai-review",
  "developer-tools",
  "github",
  "oss-maintainers"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git"
]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0"
]

[project.scripts]
reviewpack = "reviewpack.cli:app"

[project.urls]
Homepage = "https://github.com/yourname/reviewpack"
Repository = "https://github.com/yourname/reviewpack"
Issues = "https://github.com/yourname/reviewpack/issues"

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reviewpack"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
